# mota-rust

./: Cargo.toml
src/: aes.rs  lib.rs
src/frequency/: english.rs  mod.rs  types.rs
