[package]
name = "matasano"
version = "0.1.0"
authors = ["Franco Victorio <victorio.franco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.3.1"
openssl = "0.10.30"

[profile.release]
debug = true
